--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -110,10 +110,10 @@
   <ul class="nav nav-second-level collapse">
       <li class="idc"> <a href="/idc">机房管理</a></li>
       <li class="cabinet"> <a href="/cabinet">机柜管理</a></li>
-      <li class="cabinet"> <a href="/netdevice">网络设备管理</a></li>
+      <li class="netdevice"> <a href="/netdevice">网络设备管理</a></li>
       <li class="server"><a href="/server">服务器管理</a></li>
-      <li class="server"><a href="/dedicated">专线管理</a></li>
-      <li class="server"><a href="/vpn">VPN管理</a></li>
+      <li class="dedicated"><a href="/dedicated">专线管理</a></li>
+      <li class="vpn"><a href="/vpn">VPN管理</a></li>
   </ul> 
   {% endif %}
 </li> <!-- 资产管理 -->     
