--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -41,6 +41,7 @@
                 <td class="text-center">
                     <button data-id="{{server.id}}" class="btn btn-xs btn-info update">编辑</button>
                     <button data-id="{{server.id}}" class="btn btn-xs btn-danger del ">删除</button>
+					<button data-id="{{server.id}}" class="btn btn-xs btn-danger detail ">详情</button>
                 </td>
             </td>
          </tr>
