--- a/app/templates/idc/idclist.html
+++ b/app/templates/idc/idclist.html
@@ -6,7 +6,8 @@
 {% block main %} 
 <div class="col-sm-12">
 {% if role == "admin" %}
-<a href="/idcadd" class='btn btn-sm btn-primary'>添加机房</a>
+	<p><a href="/idcadd" class='btn btn-sm btn-primary'>添加机房</a></p>
+
 {% endif %}
 <table class="table table-striped table-bordered table-hover " id="editable">
 <thead>
