新增网络设备表，html，详情页 修改主机表，html，新增详情页

--- a/app/templates/netdevice/netdevicedetail.html
+++ b/app/templates/netdevice/netdevicedetail.html
@@ -15,7 +15,7 @@
         <p>机房名:{{netdevice.idc_name}}</p>
         <p>机柜ID:{{netdevice.cabinet_id}}</p>
         <p>机柜位置:{{netdevice.location}}</p>
-        <p>设备名称:{{netdevice.name}}</p>
+        <p>设备名称:{{netdevice.netdevice_name}}</p>
         <p>设备品牌:{{netdevice.brand}}</p>
         <p>设备型号:{{netdevice.model}}</p>
         <p>内存:{{netdevice.memory}}</p>
@@ -23,8 +23,8 @@
         <p>光口数量:{{netdevice.opt_port}}</p>
         <p>SN编号:{{netdevice.sn_num}}</p>
         <p>设备角色:{{netdevice.role}}</p>
-        <p>管理IP:{{netdevice.manageIp}}</p>
-        <p>公网地址:{{netdevice.alternateIp}}</p>
+        <p>管理IP:{{netdevice.manage_ip}}</p>
+        <p>公网地址:{{netdevice.alternate_ip}}</p>
         <p>运维负责人:{{netdevice.adminer}}</p>
         <p>联系电话:{{netdevice.phone}}</p>
         <p>备注:{{netdevice.comments}}</p>
