--- a/app/templates/netdevice/netdevicelist.html
+++ b/app/templates/netdevice/netdevicelist.html
@@ -11,19 +11,14 @@
 <table class="table table-striped table-bordered table-hover " id="editable">
 <thead>
     <tr>
-        <th class="text-center">编号</th>
-        <th class="text-center">机房名</th>
-        <th class="text-center">机柜ID</th>
-        <th class="text-center">设备名称</th>
-        <th class="text-center">设备品牌</th>
-        <!--<th class="text-center">设备型号</th>-->
-        <!--<th class="text-center">内存</th>-->
-        <!--<th class="text-center">SN编号</th>-->
-        <th class="text-center">设备角色</th>
+		<th class="text-center">编号</th>
+		<th class="text-center">机房名</th>
+		<th class="text-center">机柜ID</th>
+		<th class="text-center">设备名称</th>
         <th class="text-center">管理IP</th>
-        <!--<th class="text-center">公网地址</th>-->
-        <!--<th class="text-center">运维负责人</th>-->
-        <!--<th class="text-center">联系电话</th>-->
+        <th class="text-center">设备品牌</th>
+		<th class="text-center">设备角色</th>
+        <th class="text-center">内存</th>
         <th class="text-center">操作</th>
     </tr>
 </thead>
