--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -11,20 +11,16 @@
 <table class="table table-striped table-bordered table-hover " id="editable">
 <thead>
     <tr>
-        <th class="text-center">主机名</th>
-        <th class="text-center">内网IP</th>
-        <th class="text-center">外网IP</th>
-	<!--
-        <th class="text-center">主机名</th>
-        <th class="text-center">操作系统</th>
-        <th class="text-center">CPU型号</th>
-        <th class="text-center">CPU线程数</th>
-        <th class="text-center">内存</th>
-        <th class="text-center">磁盘</th>
-	-->
-        <th class="text-center">机柜ID</th>
-        <th class="text-center">运维负责人</th>
-        <th class="text-center">联系电话</th>
+		<th class="text-center">编号</th>
+		<th class="text-center">机房名</th>
+		<th class="text-center">机柜ID</th>
+		<th class="text-center">主机名</th>
+        <th class="text-center">IP地址</th>
+        <th class="text-center">机器型号</th>
+		<th class="text-center">CPU数量</th>
+		<th class="text-center">内存</th>
+		<th class="text-center">磁盘总量</th>
+        <th class="text-center">虚拟主机</th>
         <th class="text-center">操作</th>
     </tr>
 </thead>
