--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -2630,7 +2630,7 @@ a:focus {
   color: #ffffff;
   background-color: #ffffff;
   height: 1px;
-  margin: 20px 0;
+  margin: 8px 0;
 }
 .hr-line-solid {
   border-bottom: 1px solid #e7eaec;
@@ -2992,7 +2992,7 @@ code {
 .ibox-content {
   background-color: #ffffff;
   color: inherit;
-  padding: 15px 20px 20px 20px;
+  padding: 8px 20px 20px 20px;
   border-color: #e7eaec;
   border-image: none;
   border-style: solid solid none;
@@ -3026,6 +3026,9 @@ table.table-mail tr td {
 }
 .ibox-content {
   clear: both;
+}
+.ibox-content .form-group {
+    margin-bottom:8px;
 }
 .ibox-heading {
   background-color: #f3f6fb;
