修改数据库 机柜默认为空，位置默认为空 新增add server api

--- a/app/templates/netdevice/netdevicelist.html
+++ b/app/templates/netdevice/netdevicelist.html
@@ -6,7 +6,7 @@
 {% block main %}
 <div class="col-sm-12">
 {% if role == "admin" %}
-<a href="/netdeviceadd/" class='btn btn-sm btn-primary'>添加网络设备</a>
+<p><a href="/netdeviceadd/" class='btn btn-sm btn-primary'>添加网络设备</a></p>
 {% endif %}
 <table class="table table-striped table-bordered table-hover " id="editable">
 <thead>
