--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -6,7 +6,7 @@
 {% block main %} 
 <div class="col-sm-12">
 {% if role == "admin" %}
-<a href="/serveradd" class='btn btn-sm btn-primary'>添加服务器</a>
+<p><a href="/serveradd" class='btn btn-sm btn-primary'>添加服务器</a></p>
 {% endif %}
 <table class="table table-striped table-bordered table-hover " id="editable">
 <thead>
@@ -42,7 +42,7 @@
                 <td class="text-center">
                     <button data-id="{{server.id}}" class="btn btn-xs btn-info update">编辑</button>
                     <button data-id="{{server.id}}" class="btn btn-xs btn-danger del ">删除</button>
-					<button data-id="{{server.id}}" class="btn btn-xs btn-danger detail ">详情</button>
+					<button data-id="{{server.id}}" class="btn btn-xs btn-info detail ">详情</button>
                 </td>
             </td>
          </tr>
