--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -144,10 +144,125 @@
   <h4 class="modal-title">详情</h4>
       </div>
       <div class="modal-body">
-  <form method="post" id="updateForm" class="form-horizontal">
+        <div class="row">
+          <div class="col-sm-3">编号: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">机房名: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">机柜ID: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">机柜位置: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">主机名: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">操作系统: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">机器品牌: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">机器型号: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">CPU数量: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">CPU型号: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">内存: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">磁盘信息: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">磁盘总量: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">网卡数量: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">网卡型号: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">内核版本: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">SN编号: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">IP地址: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">虚拟主机: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">运维负责人: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">联系电话: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">更新时间: </div>
+          <div class="col-sm-9"></div>
+        </div>
+        <div class="hr-line-dashed"></div>
+        <div class="row">
+          <div class="col-sm-3">备注: </div>
+          <div class="col-sm-9"></div>
+        </div>
+
+<!--   <form method="post" id="updateForm" class="form-horizontal">
       <div>
     <input id='id' type='hidden' name='id' readonly='true' >
-      </div><!-- id -->
+      </div>
 
       <div class='form-group'>
     <label for="hostname" class="col-sm-3 control-label">主机名<span class="red-fonts">*</span></label>
@@ -191,11 +306,11 @@
         <input id="phone" name="phone" placeholder="Phone" type="text" class="form-control">
     </div>
       </div>
-  </form>
+  </form> -->
       </div>
       <div class="modal-footer">
-  <button type="button" class="btn btn-default update-cancel" data-dismiss="modal">取消</button>
-  <button type="button" class="btn btn-primary update-sure" data-name=''>确认</button>
+  <!-- <button type="button" class="btn btn-default update-cancel" data-dismiss="modal">取消</button> -->
+  <button type="button" class="btn btn-primary datail-sure" data-name='' data-dismiss="modal">确认</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
