--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -146,169 +146,120 @@
       <div class="modal-body">
         <div class="row">
           <div class="col-sm-3">编号: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_id"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">机房名: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_idc_name"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">机柜ID: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_cabinet_id"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">机柜位置: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_location"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">主机名: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_hostname"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">操作系统: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_os"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">机器品牌: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_brand"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">机器型号: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_model"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">CPU数量: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_cpu_num"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">CPU型号: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_cpu_model"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">内存: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_memory"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">磁盘信息: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_disk_info"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">磁盘总量: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_total_disk"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">网卡数量: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_network_num"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">网卡型号: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_network_model"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">内核版本: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_sys_kernel_version"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">SN编号: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_sn_num"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">IP地址: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_ip_address"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">虚拟主机: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_isVirtual"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">运维负责人: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_adminer"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">联系电话: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_phone"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">更新时间: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_update_time"></div>
         </div>
         <div class="hr-line-dashed"></div>
         <div class="row">
           <div class="col-sm-3">备注: </div>
-          <div class="col-sm-9"></div>
+          <div class="col-sm-9 detail_comments"></div>
         </div>
-
-<!--   <form method="post" id="updateForm" class="form-horizontal">
-      <div>
-    <input id='id' type='hidden' name='id' readonly='true' >
       </div>
-
-      <div class='form-group'>
-    <label for="hostname" class="col-sm-3 control-label">主机名<span class="red-fonts">*</span></label>
-    <div class="col-sm-7">
-        <input id="hostname" name="hostname" placeholder="Hostname" type="text" class="form-control" readonly>
-    </div>
-      </div>
-      <div class="hr-line-dashed"></div>
-      <div class='form-group'>
-    <label for="lan_ip" class="col-sm-3 control-label">内网IP</label>
-    <div class="col-sm-7">
-        <input id="lan_ip" name="lan_ip" placeholder="Lan ip" type="text" class="form-control" >
-    </div>
-      </div>
-      <div class="hr-line-dashed"></div>
-      <div class='form-group'>
-    <label for="wan_ip" class="col-sm-3 control-label">外网IP</label>
-    <div class="col-sm-7">
-        <input id="wan_ip" name="wan_ip" placeholder="Wan ip" type="text" class="form-control">
-    </div>
-      </div>
-      <div class="hr-line-dashed"></div>
-      <div class='form-group'>
-    <label for="cabinet_id" class="col-sm-3 control-label">机柜ID</label>
-    <div class="col-sm-7">
-        <select id='cabinet_id' class='multiselect dropdown-toggle btn btn-default'>
-        </select>
-    </div>
-      </div>
-      <div class="hr-line-dashed"></div>
-      <div class='form-group'>
-    <label for="op" class="col-sm-3 control-label">运维负责人</label>
-    <div class="col-sm-7">
-        <input id="op" name="op" placeholder="Operator" type="text" class="form-control">
-    </div>
-      </div>
-      <div class="hr-line-dashed"></div>
-      <div class='form-group'>
-    <label for="phone" class="col-sm-3 control-label">联系电话</label>
-    <div class="col-sm-7">
-        <input id="phone" name="phone" placeholder="Phone" type="text" class="form-control">
-    </div>
-      </div>
-  </form> -->
-      </div>
-      <div class="modal-footer">
+      <div class="modal-footer text-center">
   <!-- <button type="button" class="btn btn-default update-cancel" data-dismiss="modal">取消</button> -->
   <button type="button" class="btn btn-primary datail-sure" data-name='' data-dismiss="modal">确认</button>
       </div>
@@ -360,7 +311,41 @@ $('.update').click(function(){
 })
 // 详情
 $('.detail').click(function(){
-  $('#detailModel').modal('show')
+  $('#detailModel').modal('show');
+  var server_id = $(this).attr('data-id');
+  console.log(id);
+  $.ajax({
+    method: "GET",
+    url: "http://211.159.165.47:14320/api/v1/serverinfo/?id="+server_id,
+    success: function(data){
+      var result = data.result;
+      console.log(result);
+      $("#detailModel .detail_id").text(result.id);
+      $("#detailModel .detail_idc_name").text(result.idc_name);
+      $("#detailModel .detail_cabinet_id").text(result.cabinet_id);
+      $("#detailModel .detail_location").text(result.location);
+      $("#detailModel .detail_detail_hostname").text(result.hostname);
+      $("#detailModel .detail_os").text(result.os);
+      $("#detailModel .detail_brand").text(result.brand);
+      $("#detailModel .detail_model").text(result.model);
+      $("#detailModel .detail_cpu_num").text(result.cpu_num);
+      $("#detailModel .detail_cpu_model").text(result.cpu_model);
+      $("#detailModel .detail_memory").text(result.memory);
+      $("#detailModel .detail_disk_info").text(result.disk_info);
+      $("#detailModel .detail_total_disk").text(result.total_disk);
+      $("#detailModel .detail_network_num").text(result.network_num);
+      $("#detailModel .detail_network_model").text(result.network_model);
+      $("#detailModel .detail_sys_kernel_version").text(result.sys_kernel_version);
+      $("#detailModel .detail_sn_num").text(result.sn_num);
+      $("#detailModel .detail_ip_address").text(result.ip_address);
+      $("#detailModel .detail_isVirtual").text(result.isVirtual);
+      $("#detailModel .detail_adminer").text(result.adminer);
+      $("#detailModel .detail_phone").text(result.phone);
+      $("#detailModel .detail_update_time").text(result.update_time);
+      $("#detailModel .detail_comments").text(result.comments);
+    }
+  })
+
 })
 
 $('.update-sure').click(function(){
