server edit update

--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -386,7 +386,7 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+<!-- <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script> -->
 <script>
 $('#updateForm').Validform({tiptype:3})
 
