--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -452,7 +452,7 @@ $('.detail').click(function(){
       $("#detailModel .detail_idc_name").text(result.idc_name);
       $("#detailModel .detail_cabinet_id").text(result.cabinet_id);
       $("#detailModel .detail_location").text(result.location);
-      $("#detailModel .detail_detail_hostname").text(result['hostname']);
+      $("#detailModel .detail_hostname").text(result.hostname);
       $("#detailModel .detail_os").text(result.os);
       $("#detailModel .detail_brand").text(result.brand);
       $("#detailModel .detail_model").text(result.model);
