--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -448,12 +448,11 @@ $('.detail').click(function(){
     url: "http://211.159.165.47:14320/api/v1/serverinfo/?id="+server_id,
     success: function(data){
       var result = data.result;
-      console.log(1);
       $("#detailModel .detail_id").text(result.id);
       $("#detailModel .detail_idc_name").text(result.idc_name);
       $("#detailModel .detail_cabinet_id").text(result.cabinet_id);
       $("#detailModel .detail_location").text(result.location);
-      $("#detailModel .detail_hostname").text(result["hostname"]);
+      $("#detailModel .detail_hostname").text(result.hostname);
       $("#detailModel .detail_os").text(result.os);
       $("#detailModel .detail_brand").text(result.brand);
       $("#detailModel .detail_model").text(result.model);
