--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -87,16 +87,23 @@
       </div>
       <div class="hr-line-dashed"></div>
       <div class='form-group'>
-        <label for="location" class="col-sm-3 control-label">机柜位置<span class="red-fonts">*</span></label>
+        <label for="location" class="col-sm-3 control-label">机柜位置</label>
         <div class="col-sm-7">
             <input id="location" name="location" placeholder="" type="text" class="form-control">
         </div>
       </div>
       <div class="hr-line-dashed"></div>
+      <div class='form-group'>
+        <label for="ip_address" class="col-sm-3 control-label">IP地址</label>
+        <div class="col-sm-7">
+            <input id="ip_address" name="ip_address" placeholder="" type="text" class="form-control" readonly>
+        </div>
+      </div>
+      <div class="hr-line-dashed"></div>
 	    <div class='form-group'>
-    		<label for="hostname" class="col-sm-3 control-label">主机名<span class="red-fonts">*</span></label>
+    		<label for="hostname" class="col-sm-3 control-label">主机名<!-- <span class="red-fonts">*</span> --></label>
     		<div class="col-sm-7">
-    		    <input id="hostname" name="hostname" placeholder="" type="text" class="form-control" readonly>
+    		    <input id="hostname" name="hostname" placeholder="" type="text" class="form-control">
     		</div>
 	    </div>
       <div class="hr-line-dashed"></div>
@@ -181,13 +188,6 @@
         <label for="sn_num" class="col-sm-3 control-label">SN编号</label>
         <div class="col-sm-7">
             <input id="sn_num" name="sn_num" placeholder="" type="text" class="form-control" >
-        </div>
-      </div>
-      <div class="hr-line-dashed"></div>
-      <div class='form-group'>
-        <label for="ip_address" class="col-sm-3 control-label">IP地址</label>
-        <div class="col-sm-7">
-            <input id="ip_address" name="ip_address" placeholder="" type="text" class="form-control" >
         </div>
       </div>
       <div class="hr-line-dashed"></div>
