--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -395,46 +395,46 @@
 <script>
 $('#updateForm').Validform({tiptype:3})
 
-$('.update').click(function(){
-    var id=$(this).attr('data-id')
-    var url = "/server_update_msg?id="+id
-    var str = ''
+// $('.update').click(function(){
+//     var id=$(this).attr('data-id')
+//     var url = "/server_update_msg?id="+id
+//     var str = ''
 
-    $.getJSON('/cabinet_msg',function(data){
-    	cabinets = data['result']
-    	for(var i=0;i<cabinets.length;i++){
-    	    str += '<option value="'+cabinets[i]['id']+'">'+cabinets[i]['name']+'</option>'
-    	    }
-    	$('#cabinet_id').html(str)
+//     $.getJSON('/cabinet_msg',function(data){
+//     	cabinets = data['result']
+//     	for(var i=0;i<cabinets.length;i++){
+//     	    str += '<option value="'+cabinets[i]['id']+'">'+cabinets[i]['name']+'</option>'
+//     	    }
+//     	$('#cabinet_id').html(str)
 
-    	$.getJSON(url,function(data){
-    	    if (data['code'] == 0){
-        		server = data['result']
-        		$('#id').val(server['id'])
-        		$('#hostname').val(server['hostname'])
-        		$('#lan_ip').val(server['lan_ip'])
-        		$('#wan_ip').val(server['wan_ip'])
-            // $("#cabinet_id").val(server['cabinet_id'])
-        		$("#cabinet_id option[value='"+server['cabinet_id']+"']").attr('selected',true)
-        		$('#op').val(server['op'])
-        		$('#phone').val(server['phone'])
-        		$('#cabinet_id').multiselect({
-        			    placeholder: "请选择",
-        			    enableCaseInsensitiveFiltering: true
-        			    })
-        		$('#cabinet_id').multiselect('refresh')
-    	    }else{
-    		    $('#errmsg').html('fail')
-    	    }
-    	})
-    //	$('#cabinet_id').multiselect({
-    //		    placeholder: "请选择",
-    //		    enableCaseInsensitiveFiltering: true
-    //		    })
-    //	$('#cabinet_id').multiselect('refresh')
-    })
-    $('#updateModel').modal('show')
-})
+//     	$.getJSON(url,function(data){
+//     	    if (data['code'] == 0){
+//         		server = data['result']
+//         		$('#id').val(server['id'])
+//         		$('#hostname').val(server['hostname'])
+//         		$('#lan_ip').val(server['lan_ip'])
+//         		$('#wan_ip').val(server['wan_ip'])
+//             // $("#cabinet_id").val(server['cabinet_id'])
+//         		$("#cabinet_id option[value='"+server['cabinet_id']+"']").attr('selected',true)
+//         		$('#op').val(server['op'])
+//         		$('#phone').val(server['phone'])
+//         		$('#cabinet_id').multiselect({
+//         			    placeholder: "请选择",
+//         			    enableCaseInsensitiveFiltering: true
+//         			    })
+//         		$('#cabinet_id').multiselect('refresh')
+//     	    }else{
+//     		    $('#errmsg').html('fail')
+//     	    }
+//     	})
+//     //	$('#cabinet_id').multiselect({
+//     //		    placeholder: "请选择",
+//     //		    enableCaseInsensitiveFiltering: true
+//     //		    })
+//     //	$('#cabinet_id').multiselect('refresh')
+//     })
+//     $('#updateModel').modal('show')
+// })
 // 编辑
 $('.update').click(function(){
   $('#updateModel').modal('show');
@@ -521,26 +521,26 @@ $('.detail').click(function(){
 
 })
 
-$('.update-sure').click(function(){
-    var str=$('#updateForm').serialize()
-    var str1='&cabinet_id='+$('#cabinet_id').val()
-    $.post('/server_update/',str+str1,function(data){
-	   data=JSON.parse(data)
-    	if (data['code'] == 0){
-    	    swal({
-    		title:'Congratulation',
-    		text:data['result'],
-    		type:'success',
-    		confirmButtonText:'确定'
-    		},function(){
-    		    location.href='/server/'
-    		})
-    	}else{
-    	    swal('Error',data['errmsg'],'error')
-    	}
-    })
-    return false
-})
+// $('.update-sure').click(function(){
+//     var str=$('#updateForm').serialize()
+//     var str1='&cabinet_id='+$('#cabinet_id').val()
+//     $.post('/server_update/',str+str1,function(data){
+// 	   data=JSON.parse(data)
+//     	if (data['code'] == 0){
+//     	    swal({
+//     		title:'Congratulation',
+//     		text:data['result'],
+//     		type:'success',
+//     		confirmButtonText:'确定'
+//     		},function(){
+//     		    location.href='/server/'
+//     		})
+//     	}else{
+//     	    swal('Error',data['errmsg'],'error')
+//     	}
+//     })
+//     return false
+// })
 
 $('.del').click(function(){
     var id=$(this).attr('data-id')
