--- a/app/templates/server/serverlist.html
+++ b/app/templates/server/serverlist.html
@@ -470,6 +470,7 @@ $('.update').click(function(){
       $("#updateForm .update-sure").click(function(){
         var str = $("#updateForm").serialize();
         var strJson = $("#updateForm").serializeObject();
+        console.log(1);
         console.log(str);
         console.log(strJson);
           // $.ajax({
